-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.293 2008-05-13 18:42:12 guru Exp $
-----------------------------------------------------------------------------------------
2008-05-15
	* tar 4.3.1 made and released via email
-----------------------------------------------------------------------------------------
2005-05-12	remko
	* conf/gmtdefaults_{SI,US}.in:	Renamed from .gmtdefaults_* (no longer hidden)
	* configure.ac, gmt_init.c:	Changed accordingly
	* Makefile:		"make install-data" now copies only the appropriate directories
				and file from the share directory, i.e. not CVS directory, and
				.cvsignore and *.in files.
	* src/makefile:		Link libgmtps.$(SL) and libpsl.$(SL) to appropriate libraries.
	* src/x2sys/makefile:	No need for linking libx2sys.$(SL) against netCDF.

2005-05-12	pwessel
	* <suppl>/*.c:		Some supplement programs had a mix of GMT_fopen and fread
				which usually fails under Windows when a dynamic DLL is used.

2005-05-09	remko
	* gmt_support.c:	Allow a little more slop in determining whether primary tick
				is at same location as secondary tick.

2008-05-08	pwessel
	* grd2xyz.c:		For -E: The test for dx == dy was susceptible to round-off
	
2008-05-07	remko
	* gmt_io.c (GMT_nc_input):	Would not read all columns when no variable names given.

2008-05-06	pwessel
	* gmtselect.c:		Did not like a variable number of columns.  Now OK if ASCII
				i/o and at least 2 (3 with -Z) columns are found.
	* gmt_mgg2_header.c:	Passed 2nd, 3rd arguments to fread in the wrong order, thus
				failed to read GRD98 grids.
	* gmt_init.c:		Now, media size Custom_WxH can use W and H in inch, cm, or m
				by appending i, c, or m to each dimension.

2008-05-05	pwessel
	* psxyz.c:		Memory problem: Since realloc does not initialize we
				must explicitly set the pointer in the PSXYZ_DATA1 structure
				to NULL since we later use the pointer to determine if we
				need to free allocated memory.