@@ -1,9 +1,10 @@
 -----------------------------------------------------------------------------------------
-	$Id: ChangeLog,v 1.293 2008-05-13 18:42:12 guru Exp $
+	$Id: ChangeLog,v 1.294 2008-05-15 02:00:40 remko Exp $
 -----------------------------------------------------------------------------------------
 2008-05-15
 	* tar 4.3.1 made and released via email
 -----------------------------------------------------------------------------------------
+
 2005-05-12	remko
 	* conf/gmtdefaults_{SI,US}.in:	Renamed from .gmtdefaults_* (no longer hidden)
 	* configure.ac, gmt_init.c:	Changed accordingly
